@@ -23,6 +23,7 @@ import bisq.chat.bisqeasy.offerbook.BisqEasyOfferbookSelectionService;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannel;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannelService;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeSelectionService;
+import bisq.chat.bisqeasy.private_chats.BisqEasyPrivateChatChannelSelectionService;
 import bisq.chat.common.CommonChannelSelectionService;
 import bisq.chat.common.CommonPublicChatChannel;
 import bisq.chat.common.CommonPublicChatChannelService;
@@ -41,37 +42,31 @@ import bisq.user.UserService;
 import bisq.user.identity.UserIdentity;
 import bisq.user.identity.UserIdentityService;
 import bisq.user.profile.UserProfile;
+import bisq.user.profile.UserProfileService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 import javax.annotation.Nullable;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static bisq.chat.common.SubDomain.*;
-
 @Slf4j
+@Getter
 public class ChatService implements Service {
     private final PersistenceService persistenceService;
     private final NetworkService networkService;
     private final UserService userService;
     private final UserIdentityService userIdentityService;
-
-    @Getter
+    private final UserProfileService userProfileService;
     private final ChatNotificationService chatNotificationService;
-    @Getter
     private final BisqEasyOfferbookChannelService bisqEasyOfferbookChannelService;
-    @Getter
     private final BisqEasyOpenTradeChannelService bisqEasyOpenTradeChannelService;
-    @Getter
     private final Map<ChatChannelDomain, CommonPublicChatChannelService> commonPublicChatChannelServices = new HashMap<>();
-    @Getter
-    private final Map<ChatChannelDomain, ChatChannelSelectionService> chatChannelSelectionServices = new HashMap<>();
-    @Getter
-    private final LeavePrivateChatManager leavePrivateChatManager;
-
     private final Map<ChatChannelDomain, TwoPartyPrivateChatChannelService> twoPartyPrivateChatChannelServices = new HashMap<>();
+    private final Map<ChatChannelDomain, ChatChannelSelectionService> chatChannelSelectionServices = new HashMap<>();
+    private final LeavePrivateChatManager leavePrivateChatManager;
 
     public ChatService(PersistenceService persistenceService,
                        NetworkService networkService,
@@ -82,43 +77,60 @@ public class ChatService implements Service {
         this.networkService = networkService;
         this.userService = userService;
         this.userIdentityService = userService.getUserIdentityService();
+        this.userProfileService = userService.getUserProfileService();
 
         chatNotificationService = new ChatNotificationService(persistenceService,
-                networkService,
                 this,
                 systemNotificationService,
                 settingsService,
                 userIdentityService,
-                userService.getUserProfileService());
+                userProfileService);
 
         // BISQ_EASY
         bisqEasyOfferbookChannelService = new BisqEasyOfferbookChannelService(persistenceService,
                 networkService,
                 userService);
-        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
-                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
-
         bisqEasyOpenTradeChannelService = new BisqEasyOpenTradeChannelService(persistenceService,
                 networkService,
                 userService);
+
+        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
+
+        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
+                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
         chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OPEN_TRADES,
                 new BisqEasyOpenTradeSelectionService(persistenceService, bisqEasyOpenTradeChannelService,
                         userIdentityService));
+        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT,
+                new BisqEasyPrivateChatChannelSelectionService(persistenceService,
+                        twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT),
+                        userIdentityService));
+
 
         // DISCUSSION
         addToCommonPublicChatChannelServices(ChatChannelDomain.DISCUSSION,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, DISCUSSION_BISQ)));
-
-        twoPartyPrivateChatChannelServices.put(ChatChannelDomain.DISCUSSION,
-                new TwoPartyPrivateChatChannelService(persistenceService,
-                        networkService,
-                        userService,
-                        ChatChannelDomain.DISCUSSION));
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bisq"),
+                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bitcoin"),
+                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "markets"),
+                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "offTopic")));
+        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.DISCUSSION);
         addToChatChannelSelectionServices(ChatChannelDomain.DISCUSSION);
+
+        // EVENTS
+        addToCommonPublicChatChannelServices(ChatChannelDomain.EVENTS,
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "conferences"),
+                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "meetups"),
+                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "podcasts"),
+                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "tradeEvents")));
+        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.EVENTS);
+        addToChatChannelSelectionServices(ChatChannelDomain.EVENTS);
 
         // SUPPORT
         addToCommonPublicChatChannelServices(ChatChannelDomain.SUPPORT,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, SUPPORT_SUPPORT)));
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "support"),
+                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "questions"),
+                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "reports")));
+        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.SUPPORT);
         addToChatChannelSelectionServices(ChatChannelDomain.SUPPORT);
 
         leavePrivateChatManager = new LeavePrivateChatManager(bisqEasyOpenTradeChannelService,
@@ -135,13 +147,13 @@ public class ChatService implements Service {
                 bisqEasyOpenTradeChannelService.initialize()));
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::initialize)
-                .toList());
-        list.addAll(getTwoPartyPrivateChatChannelServices()
+                .collect(Collectors.toList()));
+        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
                 .map(PrivateChatChannelService::initialize)
-                .toList());
+                .collect(Collectors.toList()));
         list.addAll(chatChannelSelectionServices.values().stream()
                 .map(ChatChannelSelectionService::initialize)
-                .toList());
+                .collect(Collectors.toList()));
 
         list.add(chatNotificationService.initialize());
 
@@ -155,13 +167,13 @@ public class ChatService implements Service {
                 bisqEasyOpenTradeChannelService.shutdown()));
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::shutdown)
-                .toList());
-        list.addAll(getTwoPartyPrivateChatChannelServices()
+                .collect(Collectors.toList()));
+        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
                 .map(PrivateChatChannelService::shutdown)
-                .toList());
+                .collect(Collectors.toList()));
         list.addAll(chatChannelSelectionServices.values().stream()
                 .map(ChatChannelSelectionService::shutdown)
-                .toList());
+                .collect(Collectors.toList()));
 
         list.add(chatNotificationService.shutdown());
 
@@ -187,19 +199,21 @@ public class ChatService implements Service {
 
     public Optional<TwoPartyPrivateChatChannel> createAndSelectTwoPartyPrivateChatChannel(ChatChannelDomain chatChannelDomain,
                                                                                           UserProfile peer) {
-        return findTwoPartyPrivateChatChannelService(chatChannelDomain).stream()
-                .flatMap(twoPartyPrivateChatChannelService ->
-                        twoPartyPrivateChatChannelService.findOrCreateChannel(chatChannelDomain, peer).stream()
-                                .map(channel -> {
-                                    getChatChannelSelectionService(chatChannelDomain).selectChannel(channel);
-                                    return channel;
-                                }))
-                .findAny();
+        if (chatChannelDomain == ChatChannelDomain.BISQ_EASY_OFFERBOOK ||
+                chatChannelDomain == ChatChannelDomain.BISQ_EASY_OPEN_TRADES) {
+            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).findOrCreateChannel(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT, peer);
+            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).selectChannel(channel));
+            return optionalChannel;
+        } else {
+            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(chatChannelDomain).findOrCreateChannel(chatChannelDomain, peer);
+            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(chatChannelDomain).selectChannel(channel));
+            return optionalChannel;
+        }
     }
 
     public boolean isIdentityUsed(UserIdentity userIdentity) {
         boolean usedInAnyPrivateChannel = Stream.concat(bisqEasyOpenTradeChannelService.getChannels().stream(),
-                        getTwoPartyPrivateChatChannelServices()
+                        twoPartyPrivateChatChannelServices.values().stream()
                                 .flatMap(c -> c.getChannels().stream()))
                 .anyMatch(c -> c.getMyUserIdentity().equals(userIdentity));
 
@@ -214,14 +228,6 @@ public class ChatService implements Service {
     }
 
     public ChatChannelSelectionService getChatChannelSelectionService(ChatChannelDomain chatChannelDomain) {
-        switch (chatChannelDomain) {
-            case BISQ_EASY_OFFERBOOK -> {
-                return getBisqEasyOfferbookChannelSelectionService();
-            }
-            case BISQ_EASY_OPEN_TRADES -> {
-                return getBisqEasyOpenTradesSelectionService();
-            }
-        }
         return chatChannelSelectionServices.get(chatChannelDomain);
     }
 
@@ -231,6 +237,18 @@ public class ChatService implements Service {
 
     public BisqEasyOpenTradeSelectionService getBisqEasyOpenTradesSelectionService() {
         return (BisqEasyOpenTradeSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_OPEN_TRADES);
+    }
+
+    public BisqEasyPrivateChatChannelSelectionService getBisqEasyPrivateChatChannelSelectionService() {
+        return (BisqEasyPrivateChatChannelSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
+    }
+
+    private void addToTwoPartyPrivateChatChannelServices(ChatChannelDomain chatChannelDomain) {
+        twoPartyPrivateChatChannelServices.put(chatChannelDomain,
+                new TwoPartyPrivateChatChannelService(persistenceService,
+                        networkService,
+                        userService,
+                        chatChannelDomain));
     }
 
     private void addToCommonPublicChatChannelServices(ChatChannelDomain chatChannelDomain,
@@ -244,24 +262,11 @@ public class ChatService implements Service {
     }
 
     private void addToChatChannelSelectionServices(ChatChannelDomain chatChannelDomain) {
-        Optional<TwoPartyPrivateChatChannelService> privateChatChannelService = findTwoPartyPrivateChatChannelService(chatChannelDomain);
         chatChannelSelectionServices.put(chatChannelDomain,
                 new CommonChannelSelectionService(persistenceService,
-                        privateChatChannelService,
+                        twoPartyPrivateChatChannelServices.get(chatChannelDomain),
                         commonPublicChatChannelServices.get(chatChannelDomain),
                         chatChannelDomain,
                         userIdentityService));
-    }
-
-    public Optional<TwoPartyPrivateChatChannelService> findTwoPartyPrivateChatChannelService(ChatChannelDomain chatChannelDomain) {
-        return Optional.ofNullable(twoPartyPrivateChatChannelServices.get(chatChannelDomain));
-    }
-
-    public TwoPartyPrivateChatChannelService getTwoPartyPrivateChatChannelService() {
-        return findTwoPartyPrivateChatChannelService(ChatChannelDomain.DISCUSSION).orElseThrow();
-    }
-
-    public Stream<TwoPartyPrivateChatChannelService> getTwoPartyPrivateChatChannelServices() {
-        return twoPartyPrivateChatChannelServices.values().stream();
     }
 }
